# TravelOps-AI-Autonomous-Travel-Operations-Agent

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  demo_scenarios.py  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements.txt
alembic/: env.py
backend/: requirements.txt
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: adr.md  agent_design.md  agents.md  api.md  api_guide.md  api_tool_specification.md  architecture.md  contributing.md  database_design.md  deployment.md  enterprise_platform_roadmap.md  evaluation_observability_plan.md  openapi.json  release_notes.md  runtime.md  system_design.md  workflow_design.md  workflow_engine.md
frontend/: index.html  package-lock.json
knowledge_base/: faq.md
kubernetes/: backend-deployment.yaml  deployment-backend.yaml  deployment-frontend.yaml  frontend-deployment.yaml  ingress.yaml  service-backend.yaml  service-frontend.yaml
langgraph/: agent_graph.py
observability/: eval_framework.py  eval_results.json  metrics_collector.py
prompts/: intent.md  memory.md  planner.md  reflection.md  support.md
scripts/: benchmark_runtime.py  demo_all.py  demo_sdk.py  export_openapi.py  generate_metrics.py  reset_db.py  seed_demo_dataset.py  simulate_booking.py  simulate_disruption.py  simulate_payment_failure.py  simulate_provider_failure.py
tests/: eval_runner.py  load_simulator.py  test_agent_runtime.py  test_auth_api.py  test_backend.py  test_dynamic_agent_routing.py  test_e2e_flows.py  test_integrations.py  test_observability_security.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_provider_routing.py  test_reliability.py  test_runtime_context.py  test_sdk.py  (+3 more)
travelops-sdk/: README.md  pyproject.toml
travelops-sdk/travelops_sdk/: __init__.py  client.py  exceptions.py  models.py
travelops-sdk/travelops_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+81 files in other folders)
